# mosaic

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.mcp  PLAN.md  PROJECT.md  README.md  VERIFICATION.md  docker-compose.mcp.yml  pyproject.toml
client/web/: package-lock.json  package.json
client/web/app/: layout.tsx
client/web/app/(auth)/login/: page.tsx
client/web/app/(auth)/signup/: page.tsx
client/web/app/(dashboard)/: layout.tsx
client/web/app/(dashboard)/api-keys/: page.tsx
client/web/app/api/auth/signup/: route.ts
client/web/app/api/config/: route.ts
client/web/app/api/keys/: route.ts
client/web/app/api/keys/[id]/: route.ts
client/web/app/dashboard/: page.tsx
client/web/app/dashboard/settings/: page.tsx
client/web/components/dashboard/: Sidebar.tsx
client/web/components/landing/: cta-section.tsx  developers-section.tsx  features-section.tsx  footer-section.tsx  hero-section.tsx  how-it-works-section.tsx  infrastructure-section.tsx  integrations-section.tsx  metrics-section.tsx  navigation.tsx  pricing-section.tsx  security-section.tsx  testimonials-section.tsx
client/web/lib/: auth.ts  prisma.ts
client/web/prisma/: schema.prisma
client/web/prisma/migrations/20260705183217_init/: migration.sql
experiments/test/: main.py
mosaic/api/: database.py
mosaic/connectors/github/: client.py  events.py  models.py
mosaic/connectors/slack/: client.py  events.py  models.py
mosaic/core/: __init__.py  config.py  store.py
mosaic/core/enricher/: decisions.py  linker.py  ownership.py  related.py
mosaic/core/memory/: graph_query.py  models.py  query.py  service.py
mosaic/core/normalizer/: github_normalizer.py  schemas.py  slack_normalizer.py
mosaic/fixtures/slack/: messages.json
mosaic/mcp/: .env.example  http_server.py  server.py  tools.py
scripts/: README.md  demo.sh  start_demo.sh  status_demo.sh  stop_demo.sh  test_demo.sh  verify_day1.py  verify_day2.py  verify_day3.py
