[project]
name = "mosaic"
version = "0.1.0"
description = "Mosaic is an MCP-native engineering memory layer that transforms fragmented development activity across GitHub and Slack into a persistent knowledge graph that coding agents can reason over."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cognee>=1.0,<2",
    "PyGithub>=2.6,<3",
    "typer>=0.15,<1",
    "python-dotenv>=1.0,<2",
    "mcp>=1.6,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mosaic"]

[project.scripts]
mosaic = "mosaic.cli.main:main"
mosaic-mcp = "mosaic.mcp.server:main"
